Fixed text size on mobile

--- a/css-custom/style-custom.css
+++ b/css-custom/style-custom.css
@@ -47,18 +47,20 @@ footer{
 
 /* Header image */
 #header-image {
+	position:relative;
 	width:100%;
 	height:150px;
 	background-image: url(../img/bikeridesupporters.jpeg); background-position: 50% 30%;
 	background-size:cover;
 	background-repeat:no-repeat;
-	box-shadow: inset 0 -50px 170px rgba(0, 0, 0, .8);
+	box-shadow: inset 0 -50px 80px rgba(0, 0, 0, .8);
 	margin-bottom:30px;
 }
 
 #header-image h1 {
 position:absolute;
-margin-top:100px;
+bottom:-10px;
+/*margin-top:100px;*/
 font-size:50px;
 color:white;
 font-weight:100;
@@ -87,6 +89,7 @@ a .tile-panel h2 {
 @media (min-width: 780px) {
 	#header-image {
 		height:450px;
+		box-shadow: inset 0 -50px 170px rgba(0, 0, 0, .8);
 	}
 	#header-image h1 {
 		font-size: 90px;
